# gateway

./: .env.example  Cargo.toml  Dockerfile  README.md  diesel.toml
migrations/2025-09-01-215105_create_base_schema/: down.sql  up.sql
src/: context.rs  lib.rs  main.rs  models.rs  schema.rs  types.rs
src/entities/: accounts.rs  challenge_bookmarks.rs  challenge_entries.rs  entries.rs  mod.rs  ugc.rs  ugc_bookmarks.rs  ugc_checkpoints.rs  ugc_entries.rs  user_items.rs  user_kits.rs  user_ugc_flags.rs  users.rs
src/logic/: bookmark.rs  challenge.rs  customization.rs  error.rs  game_data.rs  inventory.rs  kit_data.rs  leaderboard.rs  mod.rs  oauth.rs  player.rs  stats.rs  ugc.rs
src/methods/: auth.rs  mod.rs  pamplona.rs  pamplona_authenticated.rs
src/middleware/: checkpoints.rs  http.rs  mod.rs  rpc.rs  upload.rs
src/models/: auth.rs  challenge.rs  customization.rs  game_data.rs  mod.rs  social.rs  ugc.rs  user_stats.rs
