[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
bytes = "1.11.0"
cbc = { version = "0.1.2", features = ["alloc"] }
chrono = "0.4.43"
dotenvy = "0.15.7"
hex = "0.4.3"
http-body-util = "0.1.3"
hyper = "1.7.0"
jsonrpsee = { version = "0.26.0", features = ["server"] }
jsonrpsee-proc-macros = "0.26.0"
sea-orm = { version = "2.0.0-rc.20", features = ["sqlx-postgres", "runtime-tokio-rustls", "schema-sync", "entity-registry", "with-chrono", "with-uuid"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "compression-full", "sensitive-headers", "trace", "timeout"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.18.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
